testi promo update

--- a/index.html
+++ b/index.html
@@ -542,6 +542,100 @@
           <div class="col-lg-9">
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
+      
+                 <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjW5ymJLmI6phi5lw9_QnnAtPBADR5q9zPMyHWmA-PJyf9ezg7pE=w45-h45-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Sarah aqila</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        I really like it, the place is comfortable, clean, there is a prayer room too. After less here, I am no longer afraid if 
+                        I am asked to be an MC for an event or during a presentation. The class is fun, the admins are also very friendly, I really 
+                        recommend it if you need less to improve, sir, thank you, idialogikaa❤👀 …
+                        <!-- <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> The way the lessons are delivered is
+                          easy to understand and very clear.They have now become more confident in speaking.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span> -->
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUyoodTZC9JiBz67zktWTUIj_GSpwt0Cmxo7bH8DrYQVaPgwAv5=w45-h45-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Yayang 117</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        The mentor’s delivery is easy to understand.
+                        In this class, we do a lot of practice, which helps reduce our hesitation when speaking.
+                        <!-- <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> The way the lessons are delivered is
+                          easy to understand and very clear.They have now become more confident in speaking.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span> -->
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjU_0ISqlThaDZvisA3e9bG4PrewJjVuKdJJFKQ7QEgLRCWLyT8=w45-h45-p-rp-mo-ba2-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Ayu Hamka</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        My child joined the Public Speaking class at Dialogika. According to them, Dialogika Jogja is
+                        fun, the place is comfortable, and the mentor is very kind.
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> The way the lessons are delivered is
+                          easy to understand and very clear.They have now become more confident in speaking.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
