--- a/index.html
+++ b/index.html
@@ -1518,6 +1518,64 @@
                 </div>
                 <!-- End testimonial item -->
 
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUaBqook-ihnkIIz1XvtC_XNv4WDX24Y33T8PXbJvELzOzpbE1r=w36-h36-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-1" />
+                      <h3>Rima Safitri</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        I received a referral from my boss to take this class during the COVID-19 work-from-home period. Since I was quite satisfied with the class, 
+                        I recommended it to my coworkers to take this private public speaking class in 2025. Hehehe.
+                        
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> TOverall, I'm satisfied with the teaching method. The coach is engaging, the teaching style is interactive,
+                          and the practice sessions really helped me overcome stage fright. Most importantly, the price is affordable.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXWAXRz6_X-IkE7m7OTBxdXSDddxIOp2Z_Afq6TailpLX0lOA=w36-h36-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-5" />
+                      <h3>Aulia Rahmadini Saputri</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        It's really exciting to be in the process here, it turns out that communication science is also complex,
+                        you have to learn it, thanks to Fani as a tutor, aahh I'm going to miss those exciting Saturday-Sunday
+                        meetings hahaha
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End Testimonial Item -->
+
 
               </div>
               <div class="swiper-pagination"></div>
